--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1>And I'm a <span class="multiple-text"> </span></h1>
             <p>A student pursuing a strong foundation in Software Engineering excels in collaborative environments, demonstrating a passion for technology, user-friendly app development, web development, front-end development, and UI/UX designing contributing effectively to software development and achieving excellence in every project.</p>
             <div class="social-media">
-                <a href="www.linkedin.com/in/dhanithya-b-69486b139"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/dhanithya-b-69486b139"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Dhanithya-Beligolla"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.facebook.com/dhanithya.nikethana/"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/dhx_n_x________/"><i class="fa-brands fa-instagram"></i></a>
