--- a/index.html
+++ b/index.html
@@ -160,6 +160,31 @@
                     <textarea id="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
                     <input type="submit" value="Send Mail" class="btn">
         </form>
+        <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
+        <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
+        <df-messenger
+        project-id="ethereal-orb-439707-t5"
+        agent-id="9a025933-7d98-4e60-9df6-f8ac60eaa471"
+        language-code="en"
+        max-query-length="-1"
+        allow-feedback="all">
+        <df-messenger-chat-bubble
+        chat-title="mybot">
+        </df-messenger-chat-bubble>
+        </df-messenger>
+        <style>
+        df-messenger {
+            z-index: 999;
+            position: fixed;
+            --df-messenger-font-color: #000;
+            --df-messenger-font-family: Google Sans;
+            --df-messenger-chat-background: #f3f6fc;
+            --df-messenger-message-user-background: #d3e3fd;
+            --df-messenger-message-bot-background: #fff;
+            bottom: 16px;
+            right: 16px;
+        }
+        </style>
     </section>
     <script>function sendEmail() {     
         const fullName = document.getElementById('fullName').value;     
