--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         max-query-length="-1"
         allow-feedback="all">
         <df-messenger-chat-bubble
-        chat-title="mybot">
+        chat-title="Ask About me">
         </df-messenger-chat-bubble>
         </df-messenger>
         <style>
