change ui/ux project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>Hi, Myself</h3>
             <h1>Dhanithya Beligolla</h1>
             <h1>And I'm a <span class="multiple-text"> </span></h1>
-            <p>A student pursuing a strong foundation in Software Engineering excels in collaborative environments, demonstrating a passion for technology, user-friendly app development, web development, front-end development, and UI/UX designing contributing effectively to software development and achieving excellence in every project.</p>
+            <p>A student pursuing a strong foundation in Software Engineering excels in collaborative environments, demonstrating a passion for technology, user-friendly app development, web development, front-end development, and UI/UX designing contributing effectively to software Engineering and achieving excellence in every project.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/dhanithya-b-69486b139"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Dhanithya-Beligolla"><i class="fa-brands fa-github"></i></a>
@@ -56,7 +56,7 @@
        <div class="about-concent">
          <h2 class="heading">About <span>Me</span></h2>
          <h3>Frontend Developer</h3>
-         <p>I am Dhanithya Beligolla, a 2nd-year undergraduate student at the Sri Lanka Institute of Information Technology.I am choosing Web Development and Mobile Application as my path. So I am learning about them. There is also more interest in Frontend Development and UI/UX Designing.</p>
+         <p>I am Dhanithya Beligolla, a 3rd-year undergraduate student at the Sri Lanka Institute of Information Technology.I am choosing Web Development and Mobile Application as my path. So I am learning about them. There is also more interest in Frontend Development and UI/UX Designing.</p>
        </div>
     </section>
 
@@ -94,8 +94,8 @@
                 <img src="1.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>UI/UX Design</h4>
-                    <p>Newest UI/UX design project for T Bell, a cutting-edge food delivery app designed to bring mouthwatering meals right to your door!</p>
-                    <a href="https://www.figma.com/proto/Vea9wUgKcxMnqhVWnxEGq4/Food-App?node-id=0-1&t=mkqrK5260RwAk1uf-1 " class = "btn"> Click Me</a>
+                    <p>Newest UI/UX design project for Riyasewana.com, As the University group Project of Human Computer Interaction Module we created a prototype of riyasewana.com by resoleving many userfriendly issues.</p>
+                    <a href="https://www.figma.com/proto/x7pddPxfJfyBMe2V2OwvvY/Team-Interactify?node-id=2218-1646&t=6zdPTm2plpEaJFEY-1" class = "btn"> Click Me</a>
                 </div>
             </div>
 
