--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
        <div class="about-concent">
          <h2 class="heading">About <span>Me</span></h2>
-         <h3>Frontend Developer</h3>
+         <h3>Software Engineer</h3>
          <p>I am Dhanithya Beligolla, a 3rd-year undergraduate student at the Sri Lanka Institute of Information Technology.I am choosing Web Development and Mobile Application as my path. So I am learning about them. There is also more interest in Frontend Development and UI/UX Designing.</p>
        </div>
     </section>
