--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
        <div class="about-concent">
          <h2 class="heading">About <span>Me</span></h2>
          <h3>Software Engineer</h3>
-         <p>I am Dhanithya Beligolla, a 3rd-year undergraduate student at the Sri Lanka Institute of Information Technology.I am choosing Web Development and Mobile Application as my path. So I am learning about them. There is also more interest in Frontend Development and UI/UX Designing.</p>
+         <p>I am Dhanithya Beligolla, a 3rd-year undergraduate student at the Sri Lanka Institute of Information Technology.I am choosing Software Engineer as my path. So I am learning about them. There is also more interest in Fullstack Development and Software Architecture designs.</p>
        </div>
     </section>
 
