--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <div class="protfolio-box">
                 <img src="2.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Frontend Development</h4>
-                    <p>Resturant Landing Page </p>
-                    <a href="https://restaurant-landing-page-three-omega.vercel.app/" class = "btn"> Click Me</a>
+                    <h4>Web Development</h4>
+                    <p>bla bla </p>
+                    <a href="" class = "btn"> Click Me</a>
                 </div>
             </div>
 
@@ -112,7 +112,7 @@
                 <img src="3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>bala bala</p>
+                    <p>bla bla</p>
                     <a href="" class = "btn"> Click Me</a>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 <img src="4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>bala bala</p>
+                    <p>bla bla</p>
                     <a href="" class = "btn"> Click Me</a>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                 <img src="5.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>bala bala</p>
+                    <p>bla bla</p>
                     <a href="" class = "btn"> Click Me</a>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                 <img src="6.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>bala bala</p>
+                    <p>bla bla</p>
                     <a href="" class = "btn"> Click Me</a>
                 </div>
             </div>
