--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
             <h3>Hi, Myself</h3>
             <h1>Dhanithya Beligolla</h1>
             <h1>And I'm a <span class="multiple-text"> </span></h1>
-            <p>A student pursuing a strong foundation in Software Engineering excels in collaborative environments, demonstrating a passion for technology, user-friendly app development, web development, front-end development, and UI/UX designing contributing effectively to software Engineering and achieving excellence in every project.</p>
+            <p>A passionate and adaptable software engineer with expertise in full-stack
+                development and a strong drive for continuous learning. Proficient in
+                programming languages such as Java, Python, C, C++, Dart, and JavaScript, with
+                extensive experience in web development using the MERN stack and Java
+                Spring framework. Skilled in mobile application development using Kotlin,
+                Flutter, and iOS SwiftUI. Currently developing generative AI solutions and
+                advancing knowledge in data analytics. Actively studying and leveraging
+                Microsoft Power Platform and cloud technologies, including Azure, Google
+                Cloud, and AWS, to deliver innovative and scalable solutions.
+            </p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/dhanithya-b-69486b139"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Dhanithya-Beligolla"><i class="fa-brands fa-github"></i></a>
