--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="Thevini_Samarakoon.pdf" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="profiledp.png" alt="">
+            <img src="IMG_6175.jpg" alt="">
         </div>
     </section>  
     
